@startuml

class DyMainActivity<? extends AppCompatActivity>{
    -stateID
    -clickSearch()
}

class SearchActivity<? extend AppCompatActivity>{
    -text
    -search(String text)
}
class ItemDetailActivity{
    -info
}
DyMainActivity ..> SearchActivity
SearchActivity ..> ItemDetailActivity

@enduml